# Content-Automation-Agent

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  architecture.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
core/: agent_setup.py  autopilot_graph.py  config.py
docs/: ai_agent_masterclass.md  architecture.md
services/: audit.py  hacker_news.py  journalist.py  pexels.py  rss_reader.py  social_media.py  wordpress.py
tests/: test_agent_memory.py  test_hacker_news.py  test_rss_reader.py  test_scraper.py  test_selenium.py
tools/: audit.py  browser.py  facebook.py  journalist.py  research.py  social.py  utilities.py  wordpress.py
